# experiments-boilerplate

./: .env.example  Dockerfile  Makefile  README.md  experiment_config.yaml  experiment_config_provider.py  experiment_run.py  experiment_starter.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
mlruns/0/: meta.yaml
mlruns/0/3dc4197b89454d4fad9f3910e58b2243/: meta.yaml
mlruns/0/3dc4197b89454d4fad9f3910e58b2243/inputs/8b7010bb04188f582b11d4bfcd4b6f1d/: meta.yaml
mlruns/0/3dc4197b89454d4fad9f3910e58b2243/tags/: mlflow.runName
mlruns/0/datasets/6ec7a3368617329438e3ee7994925afb/: meta.yaml
